# my-serde

./: Cargo.toml
examples/: check.rs
src/: lib.rs
